# KingSide-Finance

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run_dashboard.bat  schema.yml  streamlit_out.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
airflow/dags/: dag_ingestao_financeira.py  dag_ml_pipeline.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py  ml_bridge.py
app/api/dependencies/: auth.py
app/api/middleware/: rate_limit.py
app/api/routes/: auth.py  compare.py  forecast.py  heatmap.py  insights.py  macro.py  ranking.py  sentiment.py  stocks.py
app/core/: cache.py  config.py  database.py  logging.py  security.py
app/models/: financial.py
app/repositories/: __init__.py  base.py  cotacoes.py  dividendos.py  empresa.py  financials.py  forecasts.py  macro.py
app/schemas/: financial.py
app/services/: financial_data.py
arquivo-modelo/: CEMIG.docx
dashboards/streamlit/: app.py  config.py  requirements.txt
dashboards/streamlit/.streamlit/: config.toml
dashboards/streamlit/components/: header.py  sidebar.py
dashboards/streamlit/components/charts/: __init__.py  anomaly_chart.py  data.py  dividend_chart.py  forecast_chart.py  leverage_chart.py  macro_correlation.py  margin_chart.py  patrimony_vs_debt.py  price_chart.py  ranking_heatmap.py  recurring_results.py  revenue_vs_profit.py  sentiment_chart.py  styles.py  technical_indicators.py  utils.py  valuation_card.py
dashboards/streamlit/page_modules/: compare_assets.py  forecasting.py  fundamentals.py  investment_insights.py  macro_indicators.py  market_heatmap.py  market_overview.py  rankings.py  stock_analysis.py
dashboards/streamlit/styles/: theme.py
dashboards/streamlit/utils/: api.py  charts.py  direct.py  ui.py
database/: seed_dbFinance.sql  setup_dbFinance.sql  setup_local.sql
database/init/: 01_create_databases.sql  02_init_schemas.sql
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: financial_macros.sql
dbt/models/marts/analytics/: agg_comparison_metrics.sql  agg_correlacoes.sql  agg_retornos.sql
dbt/models/marts/dimensions/: dim_empresa.sql  dim_tempo.sql
dbt/models/marts/facts/: fato_cotacoes.sql  fato_risk_metrics.sql  fato_sector_performance.sql
dbt/models/staging/: stg_cotacoes.sql  stg_empresas.sql
dbt/tests/: assert_cotacoes_preco_positivo.sql
docker/api/: Dockerfile  requirements.txt
docker/postgres/: init.sql
infra/ci_cd/: github_actions_ci.yml
ml/anomaly_detection/: detector.py
ml/classification/: stock_classifier.py
ml/forecasting/: arima_model.py  prophet_model.py
ml/investment_scoring/: __init__.py  scorer.py
ml/quantitative_analysis/: __init__.py  correlation.py  indicators.py  risk_metrics.py
ml/sentiment_analysis/: analyzer.py
tests/: conftest.py
tests/api/: test_compare_endpoints.py  test_stocks_endpoints.py
tests/integration/: test_repositories.py
tests/ml/: test_prophet.py
tests/unit/: test_cache.py  test_financial_service.py  test_investment_scorer.py  test_risk_metrics.py
