[tool.poetry]
name = "finance"
version = "1.0.0"
description = "Finance — Enterprise Financial Analytics & ML Platform"
authors = ["Finance Engineering Team <engineering@finance.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://finance.io"
repository = "https://github.com/finance/finance"
documentation = "https://docs.finance.io"
keywords = ["finance", "analytics", "machine-learning", "data-engineering", "fintech"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
packages = [{ include = "app" }, { include = "ml" }]

# ─────────────────────────────────────────────
# Core Runtime Dependencies
# ─────────────────────────────────────────────
[tool.poetry.dependencies]
python = ">=3.12,<3.13"

# Web Framework
fastapi = "^0.115.0"
uvicorn = { version = "^0.32.0", extras = ["standard"] }
gunicorn = "^23.0.0"

# Database
sqlalchemy = { version = "^2.0.36", extras = ["asyncio"] }
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"

# Validation & Serialization
pydantic = { version = "^2.10.0", extras = ["email"] }
pydantic-settings = "^2.6.0"

# Auth & Security
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-multipart = "^0.0.18"

# Cache
redis = { version = "^5.2.0", extras = ["hiredis"] }

# HTTP Client
httpx = "^0.28.0"
aiohttp = "^3.11.0"
requests = "^2.32.0"

# Data Processing
pandas = "^2.2.3"
polars = "^1.14.0"
pyarrow = "^18.0.0"
numpy = "^2.1.0"

# Financial Data
yfinance = "^0.2.49"
pandas-datareader = "^0.10.0"
fredapi = "^0.5.2"
alpha-vantage = "^3.0.0"

# Observability
loguru = "^0.7.3"
prometheus-client = "^0.21.0"
opentelemetry-api = "^1.28.0"
opentelemetry-sdk = "^1.28.0"
opentelemetry-instrumentation-fastapi = "^0.49b0"

# Utils
python-dotenv = "^1.0.1"
tenacity = "^9.0.0"
celery = { version = "^5.4.0", extras = ["redis"] }
pytz = "^2024.2"
arrow = "^1.3.0"

# ─────────────────────────────────────────────
# Machine Learning
# ─────────────────────────────────────────────
[tool.poetry.group.ml.dependencies]
scikit-learn = "^1.5.2"
xgboost = "^2.1.3"
lightgbm = "^4.5.0"
prophet = "^1.1.6"
statsmodels = "^0.14.4"
scipy = "^1.14.1"
optuna = "^4.1.0"
shap = "^0.46.0"
mlflow = "^2.18.0"
evidently = ">=0.4.0"

# Deep Learning
tensorflow = "^2.18.0"
keras = "^3.6.0"

# NLP
transformers = "^4.46.0"
torch = "^2.5.1"
sentence-transformers = "^3.3.0"
nltk = "^3.9.1"

# Feature Engineering
feature-engine = "^1.8.2"
imbalanced-learn = "^0.12.4"

# ─────────────────────────────────────────────
# Data Engineering
# ─────────────────────────────────────────────
[tool.poetry.group.dbt.dependencies]
dbt-core = "^1.9.0"
dbt-postgres = "^1.9.0"

# Airflow roda exclusivamente via Docker (docker-compose.yml → qv-airflow-*)
# Não está aqui pois requer SQLAlchemy <2.0, incompatível com o stack principal.

# ─────────────────────────────────────────────
# Visualization
# ─────────────────────────────────────────────
[tool.poetry.group.viz.dependencies]
streamlit = "^1.40.0"
plotly = "^5.24.1"
altair = "^5.5.0"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"

# ─────────────────────────────────────────────
# Testing
# ─────────────────────────────────────────────
[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
httpx = "^0.28.0"
factory-boy = "^3.3.1"
faker = "^33.1.0"
freezegun = "^1.5.1"

# ─────────────────────────────────────────────
# Linting & Formatting
# ─────────────────────────────────────────────
[tool.poetry.group.lint.dependencies]
ruff = "^0.8.0"
black = "^24.10.0"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
bandit = "^1.8.0"
types-requests = "^2.32.0"
types-redis = "^4.6.0"
types-pytz = "^2024.2.0"

# ─────────────────────────────────────────────
# Notebooks
# ─────────────────────────────────────────────
[tool.poetry.group.notebooks.dependencies]
jupyter = "^1.1.1"
jupyterlab = "^4.3.0"
ipykernel = "^6.29.5"
nbformat = "^5.10.4"

# ─────────────────────────────────────────────
# Build System
# ─────────────────────────────────────────────
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ─────────────────────────────────────────────
# Tool Configurations
# ─────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "UP",        # pyupgrade
    "ARG",       # flake8-unused-arguments
    "SIM",       # flake8-simplify
    "TCH",       # flake8-type-checking
]
ignore = ["E501", "B008", "B905"]
exclude = [".venv", "__pycache__", "migrations", "alembic"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG", "S"]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
    \.venv
  | __pycache__
  | migrations
)/
'''

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "notebooks/", "migrations/"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=app --cov=ml --cov-report=term-missing --cov-report=html"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "api: API endpoint tests",
    "ml: Machine learning tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["app", "ml"]
omit = ["*/tests/*", "*/__init__.py", "*/migrations/*"]

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 80
